Handle infinite loop

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -31,3 +31,10 @@
   display: flex;
   justify-content: center;
 }
+
+.flex-database {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2em;
+  justify-content: center;
+}
