--- a/app/views/pension_insurances/index.js.erb
+++ b/app/views/pension_insurances/index.js.erb
@@ -1,3 +1,3 @@
-if (document.querySelector(".container-database")) {
-  document.querySelector(".container-database").innerHTML = "<%= j(render 'list_pension_insurances') %>";
+if (document.querySelector(".content-db")) {
+  document.querySelector(".content-db").innerHTML = "<%= j(render 'content-db') %>";
 }
