--- a/app/views/deminings/create.js.erb
+++ b/app/views/deminings/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.getElementById("ppsp_demining_id")) {
     document.getElementById("ppsp_demining_id").innerHTML = "<%= j(render 'form_field_demining') %>";
   }
-  if (document.querySelector(".container-database")) {
-    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_deminings') %>";
+  if (document.querySelector(".flexbox-database")) {
+    document.querySelector(".flexbox-database").innerHTML = "<%= j(render 'content-db') %>";
   }
 })
 
