--- a/app/views/hospitals/create.js.erb
+++ b/app/views/hospitals/create.js.erb
@@ -5,8 +5,8 @@ $(document).ready(function() {
   if (document.querySelector(".ppsp_hospital_id")) {
     document.querySelector(".ppsp_hospital_id").innerHTML = "<%= j(render 'form_field_hospital') %>";
   }
-  if (document.querySelector(".container-database")) {
-    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_hospitals') %>";
+  if (document.querySelector(".flexbox-database")) {
+    document.querySelector(".flexbox-database").innerHTML = "<%= j(render 'content-db') %>";
   }
 })
 
