--- a/app/views/security_coordinators/create.js.erb
+++ b/app/views/security_coordinators/create.js.erb
@@ -5,7 +5,7 @@ $(document).ready(function() {
   if (document.getElementById("ppsp_security_coordinator_id")) {
     document.getElementById("ppsp_security_coordinator_id").innerHTML = "<%= j(render 'form_field_security_coordinator') %>";
   }
-  if (document.querySelector(".container-database")) {
-    document.querySelector(".container-database").innerHTML = "<%= j(render 'list_security_coordinators') %>";
+  if (document.querySelector(".flexbox-database")) {
+    document.querySelector(".flexbox-database").innerHTML = "<%= j(render 'content-db') %>";
   }
 })
