--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -149,6 +149,28 @@
   }
 }
 
+.card-selec-db {
+  margin-bottom: 10px;
+  display: flex;
+  box-shadow: 0 4px 30px 0px rgb(230, 230, 230);
+  padding: 10px 20px;
+  align-items: center;
+  border-radius: 16px;
+  color: $orange;
+  &:hover {
+    color: $orange-dark;
+    text-decoration: none;
+    box-shadow: 0 4px 30px 0px $orange;
+  }
+  img {
+    margin-right: 8px;
+  }
+  p {
+    margin-bottom: 0;
+    font-size: 18px;
+  }
+}
+
 .active {
   background-color: $blue-dark-shadow;
 }
