--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,6 +9,7 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $orange: #ff7e67;
+$orange-light: #ffc5bb77;
 $orange-shadow: #ff7e6780;
 $orange-dark: #e66d58;
 $blue-dark: #006a71;
