Start front end on database

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,4 +15,5 @@ $orange-dark: #e66d58;
 $blue-dark: #006a71;
 $blue-dark-shadow: #00697177;
 $blue-light: #68b0ab;
+$blue-shadow: #68b0ab85;
 $gray-light: #ecf4f3;
