--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,26 +3,26 @@
   <h1 style='font-size: 48px'>Obras</h1>
   <%= image_tag('logo-ppsp.png') %>
   <div class="row align-items-center">
-    <div class="col-6">
-      <%= image_tag('home_PDF.png', width: 300, height: 500) %>
+    <div class="col-lg-6 col-md-12">
+      <%= image_tag('home_PDF.png', width: '95%', height: 500) %>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
       <h1>Créér des PPSPS au format PDF en toute simplicité</h1>
     </div>
   </div>
   <div class="row align-items-center">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
       <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
     </div>
-    <div class="col-6">
-      <%= video_tag('video-ppsp.mp4', size: "800x450", autoplay: true, loop: true, muted: 'muted') %>
+    <div class="col-lg-6 col-md-12">
+      <%= video_tag('video-ppsp.mp4', width: "95%", height: "300", autoplay: true, loop: true, muted: 'muted') %>
     </div>
   </div>
   <div class="row align-items-center">
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
       <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
     </div>
-    <div class="col-6">
+    <div class="col-lg-6 col-md-12">
       <h1>Une base de données modifiable selon vos besoins</h1>
     </div>
   </div>
