--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -109,45 +109,138 @@
   margin-bottom: 3em;
 }
 
-.card-database {
-  width: 300px;
-  padding: 4px;
-  color: black;
-  margin: 6px;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-shadow: 1px 1px 2px 2px $blue-light;
-  &:hover {
-    box-shadow: 1px 1px 2px 2px $blue-dark;
-  }
-  .card-db-delete {
-    border: none;
-    font-size: 18px;
-    color: $blue-dark;
-    font-weight: 700;
-    margin-left: 6px;
-    &:hover{
-      color: black;
-      text-decoration: none;
-    }
-  }
-  .card-db-edit {
-    border: none;
-    font-size: 18px;
-    color: $blue-dark;
-    font-weight: 700;
-    &:hover{
-      color: black;
-      text-decoration: none;
-    }
-  }
-  .card-db-header {
+@media(max-width: 1019px) {
+  .card-database {
+    width: 300px;
+    padding: 4px;
+    color: black;
+    margin: 6px;
+    border-radius: 8px;
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    box-shadow: 1px 1px 2px 2px $blue-shadow;
+    .card-db-delete {
+      border: none;
+      font-size: 18px;
+      color: $blue-dark;
+      font-weight: 700;
+      margin-left: 6px;
+      &:hover{
+        color: black;
+        text-decoration: none;
+      }
+    }
+    .card-db-edit {
+      border: none;
+      font-size: 18px;
+      color: $blue-dark;
+      font-weight: 700;
+      &:hover{
+        color: black;
+        text-decoration: none;
+      }
+    }
+
+    .card-db-header {
+      display: flex;
+      justify-content: flex-end;
+      position: absolute;
+      top: 5px;
+      right: 5px;
+    }
+
+    #spacer {
+      width: 20px; 
+      height: 25px; 
+      float: right;
+    }
   }
 }
+
+@media(min-width: 1019px) {
+  .card-database {
+    width: 100%;
+    padding: 4px;
+    color: black;
+    margin: 6px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 1px 1px 2px 2px $blue-shadow;
+    .card-db-delete {
+      border: none;
+      font-size: 18px;
+      color: $blue-dark;
+      font-weight: 700;
+      margin-left: 6px;
+      &:hover{
+        color: black;
+        text-decoration: none;
+      }
+    }
+    .card-db-edit {
+      border: none;
+      font-size: 18px;
+      color: $blue-dark;
+      font-weight: 700;
+      &:hover{
+        color: black;
+        text-decoration: none;
+      }
+    }
+    .card-db-header {
+      display: flex;
+      justify-content: flex-end;
+      flex-grow: 1;
+    }
+
+    .col-15 {
+      width: 15%;
+      text-align: center;
+      word-break: break-all;
+    }
+
+    .col-20 {
+      width: 20%;
+      text-align: center;
+      word-break: break-all;
+    }
+
+    .col-22 {
+      width: 22%;
+      text-align: center;
+      word-break: break-all;
+    }
+    
+    .col-24 {
+      width: 24%;
+      text-align: center;
+      word-break: break-all;
+    }
+
+    .col-30 {
+      width: 30%;
+      text-align: center;
+      word-break: break-all;
+    }
+
+    .col-35 {
+      width: 35%;
+      text-align: center;
+      word-break: break-all;
+    }
+
+    .col-40 {
+      width: 35%;
+      text-align: center;
+      word-break: break-all;
+    }
+  }
+}
+
 
 .card-selec-db {
   margin-bottom: 10px;
