--- a/app/views/moas/_elements.html.erb
+++ b/app/views/moas/_elements.html.erb
@@ -1,25 +1,26 @@
 <% @moas_page.each do |moa| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-15">
+      <%= moa.name %>
+    </div>
+    <div class="db-element col-35">
+      <%= moa.address %>
+    </div>
+    <div class="db-element col-15">
+      <%= moa.representative %>
+    </div>
+    <div class="db-element col-15">
+      <%= moa.phone %>
+    </div>
+    <div class="db-element col-20">
+      <%= moa.email %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_moa_path(moa), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_moa_path(moa), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_moa_path(moa), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= moa.name %>
-    </div>
-    <div class="db-element">
-      <%= moa.address %>
-    </div>
-    <div class="db-element">
-      <%= moa.representative %>
-    </div>
-    <div class="db-element">
-      <%= moa.phone %>
-    </div>
-    <div class="db-element">
-      <%= moa.email %>
     </div>
   </div>
 <% end %>
