--- a/app/views/moes/_elements.html.erb
+++ b/app/views/moes/_elements.html.erb
@@ -1,25 +1,26 @@
 <% @moes_page.each do |moe| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-15">
+      <%= moe.name %>
+    </div>
+    <div class="db-element col-35">
+      <%= moe.address %>
+    </div>
+    <div class="db-element col-15">
+      <%= moe.representative %>
+    </div>
+    <div class="db-element col-15">
+      <%= moe.phone %>
+    </div>
+    <div class="db-element col-20">
+      <%= moe.email %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_mo_path(moe), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_mo_path(moe), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_mo_path(moe), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= moe.name %>
-    </div>
-    <div class="db-element">
-      <%= moe.address %>
-    </div>
-    <div class="db-element">
-      <%= moe.representative %>
-    </div>
-    <div class="db-element">
-      <%= moe.phone %>
-    </div>
-    <div class="db-element">
-      <%= moe.email %>
     </div>
   </div>
 <% end %>
