--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -1,19 +1,20 @@
 <% @pension_insurances_page.each do |pension_insurance| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-30">
+      <%= pension_insurance.address %>
+    </div>
+    <div class="db-element col-30">
+      <%= pension_insurance.phone %>
+    </div>
+    <div class="db-element col-30">
+      <%= pension_insurance.fax %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_pension_insurance_path(pension_insurance), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= pension_insurance.address %>
-    </div>
-    <div class="db-element">
-      <%= pension_insurance.phone %>
-    </div>
-    <div class="db-element">
-      <%= pension_insurance.fax %>
     </div>
   </div>
 <% end %>
