--- a/app/views/regional_committees/_elements.html.erb
+++ b/app/views/regional_committees/_elements.html.erb
@@ -1,22 +1,23 @@
 <% @regional_committees_page.each do |regional_committee| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-24">
+      <%= regional_committee.name %>
+    </div>
+    <div class="db-element col-24">
+      <%= regional_committee.address %>
+    </div>
+    <div class="db-element col-24">
+      <%= regional_committee.phone %>
+    </div>
+    <div class="db-element col-22">
+    <%= regional_committee.fax %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_regional_committee_path(regional_committee), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
     </div>
-    <div class="db-element">
-      <%= regional_committee.name %>
-    </div>
-    <div class="db-element">
-      <%= regional_committee.address %>
-    </div>
-    <div class="db-element">
-      <%= regional_committee.phone %>
-    </div>
-    <div class="db-element">
-    <%= regional_committee.fax %>
-  </div>
   </div>
 <% end %>
