--- a/app/views/security_coordinators/_elements.html.erb
+++ b/app/views/security_coordinators/_elements.html.erb
@@ -1,25 +1,26 @@
 <% @security_coordinators_page.each do |security_coordinator| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-15">
+      <%= security_coordinator.name %>
+    </div>
+    <div class="db-element col-30">
+      <%= security_coordinator.address %>
+    </div>
+    <div class="db-element col-15">
+      <%= security_coordinator.representative %>
+    </div>
+    <div class="db-element col-15">
+    <%= security_coordinator.phone %>
+    </div>
+    <div class="db-element col-20">
+      <%= security_coordinator.email %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_security_coordinator_path(security_coordinator), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_security_coordinator_path(security_coordinator), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_security_coordinator_path(security_coordinator), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.name %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.address %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.representative %>
-    </div>
-    <div class="db-element">
-    <%= security_coordinator.phone %>
-    </div>
-    <div class="db-element">
-      <%= security_coordinator.email %>
     </div>
   </div>
 <% end %>
