--- a/app/views/sos_hands/_elements.html.erb
+++ b/app/views/sos_hands/_elements.html.erb
@@ -1,19 +1,20 @@
 <% @sos_hands_page.each do |sos_hand| %>
   <div class="card-database">
+    <div id="spacer"></div>
+    <div class="db-element col-30">
+      <%= sos_hand.name %>
+    </div>
+    <div class="db-element col-40">
+      <%= sos_hand.address %>
+    </div>
+    <div class="db-element col-20">
+    <%= sos_hand.phone %>
+    </div>
     <div class="card-db-header">
-      <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit", target: '_blank' do %>
+      <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
       <%= link_to "x", destroy_sos_hand_path(sos_hand), class: "card-db-delete", method: :post, data: { confirm: "Êtes-vous sûr de vouloir supprimer cet élément ?"} %>
-    </div>
-    <div class="db-element">
-      <%= sos_hand.name %>
-    </div>
-    <div class="db-element">
-      <%= sos_hand.address %>
-    </div>
-    <div class="db-element">
-    <%= sos_hand.phone %>
     </div>
   </div>
 <% end %>
