--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -22,14 +22,14 @@
     <%= link_to moas_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
       <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
       <p>Maîtres d'ouvrage</p>
-    <% end %>   
+    <% end %>
     <%= link_to moes_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
       <%= image_tag 'logo-moe.svg', width: 50, height: 50  %>
       <p>Maîtres d'oeuvre</p>
-    <% end %>    
+    <% end %>
     <%= link_to security_coordinators_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
       <%= image_tag 'logo-secu.svg', width: 50, height: 50  %>
-      <p>Coordinateurs sécurité</p> "
+      <p>Coordinateurs sécurité</p>
     <% end %>
     <%= link_to  pension_insurances_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
       <%= image_tag 'logo-pension.svg', width: 50, height: 50 %>
