--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ h1 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
+  font-family: $headers-font;
 }
 
 h2 {
@@ -29,6 +30,7 @@ h2 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
+  font-family: $headers-font;
 }
 
 h3 {
@@ -36,8 +38,10 @@ h3 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
+  font-family: $headers-font;
 }
 
 body {
+  font-family: $body-font;
   background-color: $gray-light;
 }
