--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -12,10 +12,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;;
-  box-shadow: 1px 1px 2px 2px $blue-light;
+  box-shadow: 1px 1px 2px 2px $blue-shadow;
   &:hover {
     cursor: pointer;
-    box-shadow: 1px 1px 2px 2px $blue-dark;
+    box-shadow: 1px 1px 2px 2px $blue-light;
   }
   .card-ppsp-reference {
     text-align: center;
