--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -15,3 +15,11 @@ $blue-dark: #006a71;
 $blue-dark-shadow: #00697177;
 $blue-light: #68b0ab;
 $gray-light: #ecf4f3;
+
+.green-color{
+  color: $green;
+}
+
+.red-color{
+  color: $red;
+}
