--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -2,11 +2,11 @@
   <h1>Mes bases de données</h1>
   <%= image_tag 'background-barriere', class: 'img-background-bottom-right' %>
   <div class="row">
-    <%= link_to anti_poisons_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
+    <%= link_to anti_poisons_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "anti_poison" do %>
       <%= image_tag 'logo-poison.svg', width: 50, height: 50  %>
       <p>Centres Anti-poison</p>
     <% end %>
-    <%= link_to deminings_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12" do %>
+    <%= link_to deminings_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "demining" do %>
       <%= image_tag 'logo-bomb.svg', width: 50, height: 50  %>
       <p>Centres de déminages</p>
     <% end %>
