--- a/app/views/direccts/_elements.html.erb
+++ b/app/views/direccts/_elements.html.erb
@@ -9,7 +9,7 @@
     <div class="db-element col-20">
       <%= direcct.fax %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_direcct_path(direcct), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
