--- a/app/views/pension_insurances/_elements.html.erb
+++ b/app/views/pension_insurances/_elements.html.erb
@@ -10,7 +10,7 @@
     <div class="db-element col-30">
       <%= pension_insurance.fax %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_pension_insurance_path(pension_insurance), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
