--- a/app/views/regional_committees/_elements.html.erb
+++ b/app/views/regional_committees/_elements.html.erb
@@ -13,7 +13,7 @@
     <div class="db-element col-22">
     <%= regional_committee.fax %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_regional_committee_path(regional_committee), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
