--- a/app/views/security_coordinators/_elements.html.erb
+++ b/app/views/security_coordinators/_elements.html.erb
@@ -13,10 +13,10 @@
     <div class="db-element col-15">
     <%= security_coordinator.phone %>
     </div>
-    <div class="db-element col-20">
+    <div class="db-element word-break col-20">
       <%= security_coordinator.email %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_security_coordinator_path(security_coordinator), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
