--- a/app/views/work_medecines/_elements.html.erb
+++ b/app/views/work_medecines/_elements.html.erb
@@ -10,7 +10,7 @@
     <div class="db-element col-30">
       <%= work_medecine.fax %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_work_medecine_path(work_medecine), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
