--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -143,7 +143,7 @@
       }
     }
 
-    .card-db-header {
+    .card-db-action {
       display: flex;
       justify-content: flex-end;
       position: absolute;
@@ -191,51 +191,18 @@
         text-decoration: none;
       }
     }
-    .card-db-header {
+    .card-db-action{
       display: flex;
       justify-content: flex-end;
       flex-grow: 1;
     }
 
-    .col-15 {
-      width: 15%;
-      text-align: center;
-      word-break: break-all;
+    .db-element {
+      margin-left: 4px;
+      margin-right: 4px;
     }
 
-    .col-20 {
-      width: 20%;
-      text-align: center;
-      word-break: break-all;
-    }
-
-    .col-22 {
-      width: 22%;
-      text-align: center;
-      word-break: break-all;
-    }
-    
-    .col-24 {
-      width: 24%;
-      text-align: center;
-      word-break: break-all;
-    }
-
-    .col-30 {
-      width: 30%;
-      text-align: center;
-      word-break: break-all;
-    }
-
-    .col-35 {
-      width: 35%;
-      text-align: center;
-      word-break: break-all;
-    }
-
-    .col-40 {
-      width: 35%;
-      text-align: center;
+    .word-break {
       word-break: break-all;
     }
   }
