--- a/app/views/anti_poisons/_elements.html.erb
+++ b/app/views/anti_poisons/_elements.html.erb
@@ -9,7 +9,7 @@
     <div class="db-element col-20">
       <%= anti_poison.phone %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_anti_poison_path(anti_poison), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
