--- a/app/views/deminings/_elements.html.erb
+++ b/app/views/deminings/_elements.html.erb
@@ -9,7 +9,7 @@
     <div class="db-element col-40">
       <%= demining.phone %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_demining_path(demining), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
