--- a/app/views/hospitals/_elements.html.erb
+++ b/app/views/hospitals/_elements.html.erb
@@ -9,7 +9,7 @@
     <div class="db-element col-30">
       <%= hospital.phone %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_hospital_path(hospital), class: "card-db-edit", target: '_blank' do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
