--- a/app/views/moas/_elements.html.erb
+++ b/app/views/moas/_elements.html.erb
@@ -13,10 +13,10 @@
     <div class="db-element col-15">
       <%= moa.phone %>
     </div>
-    <div class="db-element col-20">
+    <div class="db-element word-break col-20">
       <%= moa.email %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_moa_path(moa), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
