--- a/app/views/sos_hands/_elements.html.erb
+++ b/app/views/sos_hands/_elements.html.erb
@@ -10,7 +10,7 @@
     <div class="db-element col-20">
     <%= sos_hand.phone %>
     </div>
-    <div class="card-db-header">
+    <div class="card-db-action">
       <%= link_to edit_sos_hand_path(sos_hand), class: "card-db-edit" do %>
         <i class='fas fa-pencil-alt'></i>
       <% end %>
