Modification sccs start -> flex-start

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -19,11 +19,11 @@
 
 .container-header-form {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .container-pagination {
-  display:flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -32,7 +32,7 @@
   justify-content: center;
 }
 
-@media(max-width: 1019px) {
+@media (max-width: 1019px) {
   .flex-database {
     display: flex;
     flex-wrap: wrap;
@@ -41,7 +41,7 @@
   }
 }
 
-@media(min-width: 1019px) {
+@media (min-width: 1019px) {
   .flex-database {
     display: flex;
     flex-direction: column;
