--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -19,7 +19,7 @@
       <%= image_tag 'logo-hospital.svg', width: 50, height: 50  %>
       <p>Hôpitaux</p>
     <% end %>
-    <%= link_to moas_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "moa" do %>
+    <%= link_to moas_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12 moa", id: "moa" do %>
       <%= image_tag 'logo-moa.svg', width: 50, height: 50  %>
       <p>Maîtres d'ouvrage</p>
     <% end %>
