Modif pull request

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -6,6 +6,6 @@
       <%= f.input :email, label: "Email" %>
       <%= f.submit "Ëditer les informations", class: 'btn-blue' %>
     <% end %>
-    <%= link_to "Revenir au profil", profile_path(@user), class: 'link', data: { turbolinks: false } %>
+    <%= link_to "Revenir au profil", profile_path(@user), class: 'link' %>
   </div>
 </div>
