--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,13 +1,14 @@
 // Import your components CSS files here.
-@import "alert";
-@import "avatar";
-@import "navbar";
-@import "banner";
-@import "pdf";
-@import "icon";
-@import "card";
-@import "button";
-@import "container";
-@import "search_bar";
-@import "image";
-@import "popup";
+@import 'alert';
+@import 'avatar';
+@import 'navbar';
+@import 'banner';
+@import 'pdf';
+@import 'icon';
+@import 'card';
+@import 'button';
+@import 'container';
+@import 'search_bar';
+@import 'image';
+@import 'popup';
+@import 'calendar';
