--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -9,6 +9,7 @@
   input {
     background: transparent;
     border: none;
+    border-radius: 10px;
     color: transparent;
     position: absolute;
     top: 0;
@@ -16,12 +17,14 @@
     width: 100%;
     height: 100%;
     z-index: 10;
+    outline: none;
     .active {
       background: transparent;
       border: none;
     }
     &:focus {
       box-shadow: none;
+      border: none;
     }
   }
   .title {
