--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -4,7 +4,7 @@
       <%= f.input :first_name, label: "Prénom" %>
       <%= f.input :last_name, label: "Nom de famille" %>
       <%= f.input :email, label: "Email" %>
-      <%= f.submit "Ëditer les informations", class: 'btn-blue' %>
+      <%= f.submit "Éditer les informations", class: 'btn-blue' %>
     <% end %>
     <%= link_to "Revenir au profil", profile_path(@user), class: 'link' %>
   </div>
