Change button to link_to in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,6 +18,6 @@
     </div>
   <% else %>
     <a href="mailto:alexis.lenoir60@gmail.com" class="btn-orange">Demander une démo</a>
-    <%= button_to "Se connecter", new_user_session_path, class: "btn-orange-ext" %>
+    <%= link_to "Se connecter", new_user_session_path, class: "btn-orange-ext" %>
   <% end %>
 </div>
