--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -1,66 +1,75 @@
 .calendar-box {
-  position: relative;
   display: flex;
+  width: fit-content;
   flex-direction: column;
-  align-items: center;
-  border-radius: 10px;
-  border: 2px solid rgba($orange-dark, 0.5);
   margin-bottom: 10px;
-  .form-control[readonly] {
-    background: transparent;
-    color: transparent;
-  }
-  input {
-    background: transparent;
-    border: none;
-    border-radius: 10px;
-    color: transparent;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    outline: none;
-    .active {
-      background: transparent;
-      border: none;
-    }
-    &:focus {
-      box-shadow: none;
-      border: none;
-    }
-  }
   .title {
-    padding-top: 20px;
-    font-size: 12px;
-    color: #878788;
+    text-align: center;
+    border-radius: 10px 10px 0 0;
+    font-size: 16px;
+    padding: 5px 0;
+    color: white;
+    background-color: $orange-dark;
     letter-spacing: 0.2rem;
   }
   .date {
-    padding-left: 40px;
-    padding-right: 40px;
-    display: flex;
-    color: $black;
-
-    .day {
-      font-size: 72px;
-      margin-right: 20px;
-      width: fit-content;
+    .form-group {
+      margin-bottom: 0;
     }
-    .month {
-      padding-top: 20px;
-      font-size: 18px;
-      width: auto;
-      display: flex;
-      justify-content: center;
-      position: relative;
-      i {
-        position: absolute;
-        top: 50px;
-        left: 10px;
-        padding-top: 8px;
+    .form-control[readonly] {
+      background: transparent;
+      color: transparent;
+    }
+    input {
+      background: transparent;
+      border: none;
+      border-radius: 10px;
+      color: transparent;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 10;
+      outline: none;
+      cursor: pointer;
+      .active {
+        background: transparent;
+        border: none;
       }
+      &:focus {
+        box-shadow: none;
+        border: none;
+      }
+    }
+    padding: 10px 20px 0 20px;
+    min-width: 130px;
+    display: flex;
+    position: relative;
+    color: $black;
+    flex-direction: column;
+    align-items: center;
+    line-height: 1;
+    background-color: white;
+    border-radius: 0 0 10px 10px;
+    .date-day-month {
+      display: flex;
+      .day {
+        margin-right: 5px;
+        font-size: 48px;
+        width: fit-content;
+        font-weight: bold;
+      }
+      .month {
+        font-size: 16px;
+        width: auto;
+        display: flex;
+        align-items: flex-start;
+      }
+    }
+    .year {
+      font-size: 24px;
+      color: $orange-dark;
     }
   }
 }
