--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
   </head>
 
   <body data-marker-env = "<%= Rails.env %>">
-    <%= render 'shared/navbar' %>
+    <% if @navbar %>
+      <%= render 'shared/navbar' %>
+    <% end %>
     <%= render 'shared/flashes' %>
     <%= yield %>
   </body>
