--- a/app/assets/stylesheets/components/_errors.scss
+++ b/app/assets/stylesheets/components/_errors.scss
@@ -53,7 +53,7 @@
     margin: 10px 0;
 }
 
-.container {
+.container-error {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -202,21 +202,21 @@
 }
 
 @media screen and (max-width: 1000px) {
-    .container {
+    .container-error {
       -webkit-transform: scale(.85);
               transform: scale(.85);
     }
   }
 
   @media screen and (max-width: 850px) {
-    .container {
+    .container-error {
       -webkit-transform: scale(.75);
               transform: scale(.75);
     }
   }
 
   @media screen and (max-width: 775px) {
-    .container {
+    .container-error {
       -ms-flex-wrap: wrap-reverse;
           flex-wrap: wrap-reverse;
       -webkit-box-align: inherit;
@@ -226,7 +226,7 @@
   }
 
   @media screen and (max-width: 370px) {
-    .container {
+    .container-error {
         -webkit-transform: scale(.6);
                 transform: scale(.6);
       }
