try to make video works

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,7 @@
       <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
     </div>
     <div class="col-lg-6 col-md-12">
+      <%= video_tag('video-ppsp.mp4', width: "95%", height: "300", autoplay: true, loop: true, muted: 'muted') %>
     </div>
   </div>
   <div class="row align-items-center">
