add background barriere to assets

--- a/app/views/pages/database.html.erb
+++ b/app/views/pages/database.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Mes bases de données</h1>
-  <%= image_tag 'background-barriere', class: 'img-background-bottom-right' %>
+  <%= image_tag 'background-barriere.svg', class: 'img-background-bottom-right' %>
   <div class="row">
     <%= link_to anti_poisons_path, class: "card-selec-db col-lg-4 col-md-6 col-sm-12", id: "anti_poison" do %>
       <%= image_tag 'logo-poison.svg', width: 50, height: 50  %>
