--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,76 @@
 // Specific CSS for your home-page
+.container-home-page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  h2 {
+    font-size: 32px;
+  }
+}
+
+.home-banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-bottom: 50px;
+  h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin-bottom: 0;
+  }
+  img {
+    width: 100px;
+    height: 100px;
+  }
+  .btn-orange {
+    width: fit-content;
+    font-size: 24px;
+  }
+  .btn-orange-ext {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: fit-content;
+    font-size: 16px;
+  }
+  &:before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 200px;
+    background-color: rgba($blue-dark, 0.6);
+    clip-path: ellipse(1400px 280px at 50% -50%);
+    z-index: -1;
+  }
+}
+
+.home-container-card {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px 50px;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.home-card {
+  width: 400px;
+  .desc {
+    font-size: 16px;
+    text-align: center;
+  }
+  .container-media {
+    width: 100%;
+    height: 300px;
+  }
+}
+
+.separator {
+  margin-left: auto;
+  margin-right: auto;
+  height: 2px;
+  width: 50%;
+  background-color: black;
+}
