--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Se connecter", new_user_session_path, class: "btn-orange-ext" %>
     <h1>Obras</h1>
     <%# <%= image_tag('logo-ppsp.png') %>
-    <h2>Créer votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
+    <h2>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
     <%= link_to "Demander une démo", "mailto:alexis.lenoir60@gmail.com", class: "btn-orange" %>
   </div>
   <div class="home-container-card">
