--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   h2 {
-    font-size: 32px;
+    font-size: 24px;
   }
 }
 
@@ -13,7 +13,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   position: relative;
+  min-height: 200px;
   margin-bottom: 50px;
   h1 {
     font-size: 48px;
@@ -26,7 +28,7 @@
   }
   .btn-orange {
     width: fit-content;
-    font-size: 24px;
+    font-size: 16px;
   }
   .btn-orange-ext {
     position: absolute;
@@ -41,7 +43,7 @@
     width: 100%;
     height: 200px;
     background-color: rgba($blue-dark, 0.6);
-    clip-path: ellipse(1400px 280px at 50% -50%);
+    clip-path: ellipse(100vw 280px at 50% -50%);
     z-index: -1;
   }
 }
@@ -73,4 +75,16 @@
   height: 2px;
   width: 50%;
   background-color: black;
+}
+
+@media (max-width: 700px) {
+  .home-banner {
+    h1 {
+      font-size: 32px;
+    }
+    .btn-orange-ext {
+      top: 5px;
+      right: 5px;
+    }
+  }
 }
